@@ -9,7 +9,6 @@ import java.util.ArrayList;
 import java.util.Date;
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 @Service
 public class ReservationServiceImpl implements ReservationService {
@@ -20,13 +19,34 @@ public class ReservationServiceImpl implements ReservationService {
 
     public ReservationServiceImpl() {
         reservations.add(new Reservation("Tennis #1", new Date(2001, 1, 3), 20, new Player("Roger", "N/A"), TENNIS));
+        reservations.add(new Reservation("Tennis #1", new Date(2001, 1, 3), 20, new Player("Roger", "N/A"), TENNIS));
+        reservations.add(new Reservation("Tennis #1", new Date(2001, 1, 3), 20, new Player("Roger", "N/A"), TENNIS));
+        reservations.add(new Reservation("Tennis #1", new Date(2001, 1, 3), 20, new Player("Roger", "N/A"), TENNIS));
+        reservations.add(new Reservation("Tennis #1", new Date(2001, 1, 3), 20, new Player("Roger", "N/A"), TENNIS));
+        reservations.add(new Reservation("Tennis #1", new Date(2001, 1, 3), 20, new Player("Roger", "N/A"), TENNIS));
+        reservations.add(new Reservation("Tennis #1", new Date(2001, 1, 3), 20, new Player("Roger", "N/A"), TENNIS));
+        reservations.add(new Reservation("Tennis #1", new Date(2001, 1, 3), 20, new Player("Roger", "N/A"), TENNIS));
+        reservations.add(new Reservation("Tennis #1", new Date(2001, 1, 3), 20, new Player("Roger", "N/A"), TENNIS));
+        reservations.add(new Reservation("Tennis #1", new Date(2001, 1, 3), 20, new Player("Roger", "N/A"), TENNIS));
+        reservations.add(new Reservation("Tennis #1", new Date(2001, 1, 3), 20, new Player("Roger", "N/A"), TENNIS));
+        reservations.add(new Reservation("Tennis #1", new Date(2001, 1, 3), 20, new Player("Roger", "N/A"), TENNIS));
+        reservations.add(new Reservation("Tennis #1", new Date(2001, 1, 3), 20, new Player("Roger", "N/A"), TENNIS));
+        reservations.add(new Reservation("Tennis #1", new Date(2001, 1, 3), 20, new Player("Roger", "N/A"), TENNIS));
+        reservations.add(new Reservation("Tennis #1", new Date(2001, 1, 3), 20, new Player("Roger", "N/A"), TENNIS));
+        reservations.add(new Reservation("Tennis #1", new Date(2001, 1, 3), 20, new Player("Roger", "N/A"), TENNIS));
+        reservations.add(new Reservation("Tennis #1", new Date(2001, 1, 3), 20, new Player("Roger", "N/A"), TENNIS));
+        reservations.add(new Reservation("Tennis #1", new Date(2001, 1, 3), 20, new Player("Roger", "N/A"), TENNIS));
+        reservations.add(new Reservation("Tennis #1", new Date(2001, 1, 3), 20, new Player("Roger", "N/A"), TENNIS));
+        reservations.add(new Reservation("Tennis #1", new Date(2001, 1, 3), 20, new Player("Roger", "N/A"), TENNIS));
+        reservations.add(new Reservation("Tennis #1", new Date(2001, 1, 3), 20, new Player("Roger", "N/A"), TENNIS));
+        reservations.add(new Reservation("Tennis #1", new Date(2001, 1, 3), 20, new Player("Roger", "N/A"), TENNIS));
         reservations.add(new Reservation("Tennis #2", new Date(2001, 1, 4), 20, new Player("Jogn", "N/A"), TENNIS));
     }
 
     @Override
     public List<Reservation> query(String courtName) {
         return this.reservations.stream()
-                .filter(reservation -> Objects.equals(reservation.getCourtName(), courtName))
-                .collect(Collectors.toList());
+                .filter(reservation -> Objects.equals(reservation.getSportType().getName(), courtName))
+                .toList();
     }
 }
